@@ -1,3 +1,5 @@
+* Renamed ArrayNodule to CompoundNodule.
+
 0.17.0
 ------
 
